welcome.lessons.welcome.bat.bool1.HasTeen.scala.code
def hasTeen(a:Int, b:Int, c:Int): Boolean = {
if (( 13<= a <= 19 ) || ( 13<= b <= 19 ) || ( 13<= c <= 19 )) return true
else return false
}